<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bordas_campos"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/comissao_de_borracheiro"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/digite_a_porcentagem_ou_o_valor"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordas_campos"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent_comissao"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cmpPercComissao"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bordas_campos"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordas_campos"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_comissao"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cmpValorComissao"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bordas_campos"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:maxLength="10"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSalvaDados"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/green"
            android:text="@string/confirma_comissao"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnCancelaDados"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/delete"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>