<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColetaTermosAceite"
    android:background="@drawable/fundo_paginas"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termo1"
            android:padding="5dp"
            android:layout_gravity="center_vertical|end"
            android:gravity="center" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/chkAceite1"
            android:checked="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termo2"
            android:padding="5dp"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/chkAceite2"
            android:checked="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termo3"
            android:padding="5dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|end"
            android:gravity="center" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/chkAceite3"
            android:checked="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:id="@+id/formBotoesFimColeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="10dp">

<!--            <Button-->
<!--                android:id="@+id/btnVoltar"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:background="@drawable/back" />-->

            <Button
                android:id="@+id/btnAvancar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="Aceitar Termos!"
                android:backgroundTint="@color/green" />
        </LinearLayout>
        <View
            android:id="@+id/viewAccTermos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>